--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,7 +1,7 @@
 Caleb Curry:
     name: 'Caleb Curry'
-    bio: 'Through continually writing code and teaching software, I’ve built strong skills in software and entrepreneurship. With every role, I bring more than the ability to write code. I bring the ability to turn software into a valuable tool that anyone can use and understand.'
-    avatar: '/assets/images/myface.jpeg'
+    bio: 'I bring the ability to turn software into a valuable tool that anyone can use and understand.'
+    avatar: '/assets/images/mface.jpeg'
     links:
         - label: 'Email'
           icon: 'fas fa-fw fa-envelope-square'
